# CPP-SQLite-ReservationSystem

./: CMakeLists.txt  README.md
build-linux/: CReservSystem
src/: CMakeLists.txt  main.cpp
src/CReservSystem/: creservsystem.cpp  creservsystem.h
src/CReservSystem/model/: reserva.cpp
src/ReservationGUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
